objects/SGR_Opty_Days_to_Submit__mdt.object
<CustomObject>
    <fields>
        <fullName>Days_to_Submit__c</fullName>
        <label>Days to Submit</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <description>SGR Division</description>
        <label>HCSC Division</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SGR Opty Days to Submit</label>
    <pluralLabel>SGR Opty Days to Submit</pluralLabel>
</CustomObject>